--- a/index.html
+++ b/index.html
@@ -1,49 +1,39 @@
-<!doctype html>
-<html>
-<head>
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
-  <title>Socket.IO chat</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font: 13px Helvetica, Arial; }
-    form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; display: flex;}
-    form input { border: 0; padding: 10px; flex: 1;}
-    form button { background: rgb(130, 224, 255); border: none; padding: 10px; }
-    #messages { list-style-type: none; margin: 0; padding: 0; }
-    #messages li { padding: 5px 10px; }
-    #messages li:nth-child(odd) { background: #eee; }
-    #messages { margin-bottom: 40px }
-  </style>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="https://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script>
-      $(function () {
-          var socket = io('/?roomId=testAndGetRoomUsers');
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="theme-color" content="#000000" />
 
-          $('form').submit(function(){
-              $('#m').val() && socket.emit('msg', $('#m').val());
-              $('#m').val('');
-              return false;
-          });
-		  
-		  socket.emit('join', {
-			name: '张三',
-			id: '3',
-			time: new Date()
-		  })
+    <title>umi3 demo</title>
+    <!-- set `maximum-scale` for some compatibility issues -->
+    <!-- 强制显示方式 -->
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,viewport-fit=cover"
+    />
+    <!-- 允许全屏 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- 顶端状态条样式 -->
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <!-- 忽略将数字变为电话号码 -->
+    <meta content="telephone=no" name="format-detection" />
 
-          socket.on('msg', function(msg){
-              $('#messages').append($('<li>').text(JSON.stringify(msg)));
-              window.scrollTo(0, document.body.scrollHeight);
-          });
-      });
-  </script>
-</head>
-<body>
-<ul id="messages"></ul>
-<form action="">
-  <input id="m" autocomplete="off"/>
-  <button>发送</button>
-</form>
-</body>
+    <!-- 设置网页图标 -->
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/umi.css" />
+    <script>
+      window.routerBase = "/";
+    </script>
+    <script>
+      //! umi version: 3.2.9
+    </script>
+  </head>
+  <body>
+    <div id="root"></div>
+
+    <script src="/umi.js"></script>
+  </body>
 </html>
