push to master: 开启GZIP

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta content="telephone=no" name="format-detection" />
 
     <!-- 设置网页图标 -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/umi.css" />
     <script>
       window.routerBase = "/";
